# kernelshark-stacklook

./: CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  build.nix  flake.nix
doc/: Doxyfile  design.doxygen  mainpage.doxygen
doc/user/: user-manual.md  user-manual.odt
src/: CMakeLists.txt  SlButton.cpp  SlButton.hpp  SlConfig.cpp  SlConfig.hpp  SlDetailedView.cpp  SlDetailedView.hpp  SlPrevState.cpp  SlPrevState.hpp  Stacklook.cpp  stacklook.c  stacklook.h
